--- a/AltaPerspectiva/src/AltaPerspectiva/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva/tsScripts/app/core/nav/apNav.html
@@ -51,7 +51,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="border-right"><a asp-area="" asp-controller="Home" asp-action="Index">Alta Perspectiva</a></li>
-                <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                <li><a routerLink="/proyectos" routerLinkActive="active">Proyectos</a></li>
                 <li><a asp-area="" asp-controller="Home" asp-action="Index">About</a></li>
                 <li><a asp-area="" asp-controller="Home" asp-action="Index">Contact</a></li>
             </ul>
