--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -12,10 +12,10 @@
     </div>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="border-right"><a asp-area="" asp-controller="Home" asp-action="Index">Alta Perspectiva</a></li>
-            <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-            <li><a asp-area="" asp-controller="Home" asp-action="Index">About</a></li>
-            <li><a asp-area="" asp-controller="Home" asp-action="Index">Contact</a></li>
+            <li class="border-right"><a routerLink="/">Alta Perspectiva</a></li>
+            <li><a routerLink="/question">Questions</a></li>
+            <li><a routerLink="/learn">Learn</a></li>
+            <li><a routerLink="/project">Project</a></li>
         </ul>
         <div class="collapse navbar-collapse" id="site-navbar-collapse">
             <!--@Html.Partial("_LoginPartial")-->
