font icon and other text fonts added.

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -12,13 +12,14 @@
     </div>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="border-right"><a routerLink="/">Alta Perspectiva</a></li>
+            <li class="border-right nav-firstChild"><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question">Questions</a></li>
             <li><a routerLink="/learn">Learn</a></li>
             <li><a routerLink="/project">Project</a></li>
         </ul>
-        <div class="collapse navbar-collapse" id="site-navbar-collapse">
-            <!--@Html.Partial("_LoginPartial")-->
-        </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Log in</a></li>
+            <li><a href="#">Register</a></li>
+        </ul>
     </div>
 </div>
