tabs panel layout added and unnecessary  css deleted

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -12,7 +12,7 @@
     </div>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="border-right nav-firstChild"><a routerLink="/">Alta Perspectiva</a></li>
+            <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question">Questions</a></li>
             <li><a routerLink="/learn">Learn</a></li>
             <li><a routerLink="/project">Project</a></li>
