Question home page nav bar added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -1,4 +1,11 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top">
+﻿<style>
+/*======set back ground for question home page.=======*/
+    .backgroundset {
+        min-height: 66px !important;
+        background-image: url(../images/background.png);
+    }
+</style>
+<div class="navbar navbar-inverse navbar-fixed-top" [ngClass]="className">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
