--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -1,5 +1,8 @@
 ﻿<style>
     /*======set back ground for question home page.=======*/
+    .navbar-right {
+        padding-right:10px;
+    }
     .backgroundset {
         min-height: 66px !important;
         background-image: url(../images/background.png);
@@ -67,12 +70,12 @@
                 <div class="dropdown-menu dropdown-menu-right" role="menu">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <div class="lef-column padding-middle"><span class="fa fa-user"></span></div>
-                            <a for="contain" data-toggle="dropdown" class="padding-middle"> Profile </a>
+                            <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a href="/profile" for="contain" data-toggle="dropdown" class="padding-middle"> Profile </a></div>
+                            
                         </div>
                         <div class="form-group">
-                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span></div>
-                            <a href="/signout" for="contain"  class="padding-middle" (click)="LogOut()"> Sign Out </a>
+                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/signout" for="contain" class="padding-middle" (click)="LogOut()"> Sign Out </a></div>
+                            
                         </div>
                     </form>
                 </div>
