--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -35,6 +35,9 @@
         -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 1px rgba(0, 0, 0, 0.08);
         box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 1px rgba(0, 0, 0, 0.08);
     }
+    .form-horizontal .form-group{
+        margin-left:5px;
+    }
 </style>
 <div class="navbar navbar-inverse navbar-fixed-top" [ngClass]="className">
     <div class="navbar-header">
