LogIn Home page design added user  image fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -38,6 +38,11 @@
     .form-horizontal .form-group{
         margin-left:5px;
     }
+    
+.dropdown-toggle:focus {
+    color: #fff;
+    background-color: transparent !important;
+}
 </style>
 <div class="navbar navbar-inverse navbar-fixed-top" [ngClass]="className">
     <div class="navbar-header">
