integrate openid with azure

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -65,7 +65,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
             <li><a href="/signin">Log in</a></li>
-            <li><a href="http://localhost:54540/Account/Register">Register</a></li>
+            <li><a href="http://altaauth.azurewebsites.net/Account/Register">Register</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="_logObj.isLoggedIn">
             <li><a href="#"><i class="fa fa-bell notification-font"> </i> <span class="badge">{{_logObj.notifyCount}}</span></a></li>
