DAshboard layout building

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -33,7 +33,7 @@
                 <div class="dropdown-menu dropdown-menu-right" role="menu">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a href="/profile" for="contain" data-toggle="dropdown" class="padding-middle"> Profile </a></div>
+                            <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a routerLink="/dashboard" for="contain" data-toggle="dropdown" (click)="goToDashBoard"  class="padding-middle"> Profile </a></div>
                             
                         </div>
                         <div class="form-group">
