--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -14,7 +14,7 @@
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
-            <li><a routerLink="/question/detail">Questions</a></li>
+            <li><a routerLink="/question/home">Questions</a></li>
             <li><a routerLink="/learn">Learn</a></li>
             <li><a routerLink="/project">Project</a></li>           
         </ul>
