--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -40,6 +40,10 @@
                             <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/signout" for="contain" class="padding-middle" (click)="LogOut()"> Sign Out </a></div>
                             
                         </div>
+                        <div class="form-group">
+                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/questions/getcategory" for="contain" class="padding-middle" > Sign Out </a></div>
+
+                        </div>
                     </form>
                 </div>
                 <!-- ======== -->
