--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -35,13 +35,13 @@
                         <div class="form-group">
                             <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a routerLink="/dashboard" for="contain" data-toggle="dropdown" (click)="goToDashBoard"  class="padding-middle"> Profile </a></div>
                             
+                        </div>                        
+                        <div class="form-group">
+                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/questions/getcategory" for="contain" class="padding-middle" > Manage Categories </a></div>
+
                         </div>
                         <div class="form-group">
                             <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/signout" for="contain" class="padding-middle" (click)="LogOut()"> Sign Out </a></div>
-                            
-                        </div>
-                        <div class="form-group">
-                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/questions/getcategory" for="contain" class="padding-middle" > Sign Out </a></div>
 
                         </div>
                     </form>
