akash:IsAnonemus added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -14,8 +14,10 @@
         <ul class="nav navbar-nav">
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question/home/1">Questions</a></li>
-            <li><a routerLink="/learn">Learn</a></li>
-            <li><a routerLink="/project">Project</a></li>           
+            <!--<li><a routerLink="/learn">Learn</a></li>
+            <li><a routerLink="/project">Project</a></li>-->
+            <li><a>My Bookmark </a></li>
+
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
             <!--<li><a routerLink="/dashboard" for="contain" data-toggle="dropdown" (click)="goToDashBoard" class="padding-middle"> Profile </a></li>-->
