akash:queston link added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -16,7 +16,7 @@
             <li><a routerLink="/question/home/1">Questions</a></li>
             <!--<li><a routerLink="/learn">Learn</a></li>
             <li><a routerLink="/project">Project</a></li>-->
-            <li><a>My Bookmarks</a></li>
+            <li><a routerLink="/question/home/2">My Bookmarks</a></li>
 
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
