--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -15,8 +15,8 @@
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question/home/1">Questions</a></li>
             <!--<li><a routerLink="/learn">Learn</a></li>
-            <li><a routerLink="/project">Project</a></li>-->
-            <li><a routerLink="/question/home/2">My Bookmarks</a></li>
+            <li><a routerLink="/project">Project</a></li>
+            <li><a routerLink="/question/home/2">My Bookmarks</a></li>-->
 
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
