--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -1,4 +1,4 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top" [ngClass]="className">
+﻿<div class="navbar navbar-inverse navbar-fixed-top z-header" [ngClass]="className">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
