--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -20,7 +20,7 @@
 
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
-            <!--<li><a routerLink="/dashboard" for="contain" data-toggle="dropdown" (click)="goToDashBoard" class="padding-middle"> Profile </a></li>-->
+            <li><a routerLink="/dashboard" for="contain" data-toggle="dropdown" (click)="goToDashBoard" class="padding-middle"> Profile </a></li>
             <li><a href="/signin">Log in</a></li>
             <li><a href="/signin">Register</a></li>
         </ul>
