--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -14,17 +14,15 @@
         <ul class="nav navbar-nav">
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question/home/1">Questions</a></li>
-            <!--<li><a routerLink="/learn">Learn</a></li>
-            <li><a routerLink="/project">Project</a></li>
-            <li><a routerLink="/question/home/2">My Bookmarks</a></li>-->
-
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
-            <li><a [routerLink]="['/dashboard/viewprofile/user-question',credential.id]" for="contain" data-toggle="dropdown" (click)="goToDashBoard" class="padding-middle"> Profile </a></li>
+            <!--<li><a [routerLink]="['/dashboard/viewprofile',_logObj.user.userid]" for="contain" data-toggle="dropdown"  class="padding-middle"> Profile </a></li>-->
+            <<!--li><a [routerLink]="['/dashboard/viewprofile','1fc7fcf4-1afc-439e-a546-6b265b3c3400']" for="contain" data-toggle="dropdown" class="padding-middle"> Profile </a></li>-->
+
             <li><a href="/signin">Log in</a></li>
             <li><a href="/signin">Register</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right" *ngIf="_logObj.isLoggedIn">           
+        <ul class="nav navbar-nav navbar-right" *ngIf="_logObj.isLoggedIn">
             <li>
                 <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
                     <img class="user-image" src="{{_logObj.user.imageUrl}}" />{{_logObj.user.name}}
@@ -33,11 +31,11 @@
                 <div class="dropdown-menu dropdown-menu-right" role="menu">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a routerLink="/dashboard/viewprofile/user-question/4AA7344B-9224-48B3-95CF-BFD25485DEBB" for="contain" data-toggle="dropdown"   class="padding-middle"> Profilexxx </a></div>
-                            
-                        </div>                        
+                            <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a [routerLink]="['/dashboard/viewprofile',_logObj.user.userid]" for="contain" data-toggle="dropdown" class="padding-middle"> Profile</a></div>
+
+                        </div>
                         <div class="form-group">
-                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/questions/getcategory" for="contain" class="padding-middle" > Manage Categories </a></div>
+                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/questions/getcategory" for="contain" class="padding-middle"> Manage Categories </a></div>
 
                         </div>
                         <div class="form-group">
