--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -17,7 +17,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
             <!--<li><a [routerLink]="['/dashboard/viewprofile',_logObj.user.userid]" for="contain" data-toggle="dropdown"  class="padding-middle"> Profile </a></li>-->
-            <<!--li><a [routerLink]="['/dashboard/viewprofile','1fc7fcf4-1afc-439e-a546-6b265b3c3400']" for="contain" data-toggle="dropdown" class="padding-middle"> Profile </a></li>-->
+            <!--li><a [routerLink]="['/dashboard/viewprofile','1fc7fcf4-1afc-439e-a546-6b265b3c3400']" for="contain" data-toggle="dropdown" class="padding-middle"> Profile </a></li>-->
 
             <li><a href="/signin">Log in</a></li>
             <li><a href="/signin">Register</a></li>
