akas/sh:appnav compoent

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -1,4 +1,5 @@
 ﻿<div #loginDialogAnchor></div>
+<div #registerDialogAnchor></div>
 
 <div class="navbar navbar-inverse navbar-fixed-top z-header" [ngClass]="className">
     <div class="navbar-header">
@@ -20,7 +21,7 @@
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
             <!--<li><a [routerLink]="['/dashboard/viewprofile','80a2b9fe-609f-435b-86f8-97b567189b22']" for="contain" data-toggle="dropdown" class="padding-middle"> PP </a></li>-->
             <li><a (click)="openLoginDialogAnchor()">Log in</a></li>
-            <li><a href="/signin">Register</a></li>
+            <li><a (click)="openRegisterDialogAnchor()">Register</a></li>
         </ul>
         <div class="navbar-right" *ngIf="_logObj.isLoggedIn">
             <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
