--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -29,7 +29,7 @@
             <div class="dropdown-menu dropdown-menu-right" role="menu">
                 <form class="form-horizontal" role="form">
                     <div class="form-group">
-                        <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a [routerLink]="['/dashboard/viewprofile',_logObj.user.userid]" for="contain" data-toggle="dropdown" class="padding-middle"> Profile</a></div>
+                        <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a href='/dashboard/viewprofile/{{_logObj.user.userid}}' for="contain" data-toggle="dropdown" class="padding-middle"> Profile</a></div>
 
                     </div>
 
