--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/all-user/all-user.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/all-user/all-user.html
@@ -29,8 +29,8 @@
     }
 </style>
 <div class="usr-search-group">
-    <input class="user-search" type="text" />
-    <button class="btn-usr-search">Search</button>
+    <input class="user-search" [(ngModel)]="userName" type="text" />
+    <button class="btn-usr-search" (click)="onKeyPress()">Search</button>
 </div>
 <div class="row row-fix all-user-list">
     <div class="col-md-4 row-gap width-xs" *ngFor="let usr of user">
