--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/all-user/all-user.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/all-user/all-user.html
@@ -6,12 +6,13 @@
     }
 
     .user-search {
+        padding: 5px;
         width: 90%;
         height: 35px;
-        margin: 0;
         border: 1px solid #cccbcb;
         border-bottom-left-radius: 6px;
         border-top-left-radius: 6px;
+        margin-bottom: 20px;
     }
 
     .btn-usr-search {
@@ -28,11 +29,14 @@
         padding: 0 25%;
     }
 </style>
+<div class="modal-overlay z-modal" *ngIf="loader">
+    <div class="loader"></div>
+</div>
 <div class="usr-search-group">
-    <input class="user-search" [(ngModel)]="userName" type="text" placeholder="Enter User Name "/>
+    <input class="user-search" [(ngModel)]="userName" type="text" placeholder="Enter User Name " />
     <button class="btn-usr-search" (click)="onKeyPress()">Search</button>
 </div>
-<div class="row row-fix all-user-list" >
+<div class="row row-fix all-user-list">
     <div class="col-md-4 row-gap width-xs" *ngFor="let usr of user">
         <user-info [userObj]="usr"></user-info>
     </div>
