--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -9,30 +9,33 @@
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question/home/1"><!--Questions-->Preguntas</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
-            <li><a href="/signin">Iniciar sesión <!--Log in--></a></li>
-            <li><a href="/signin">Regístrate <!--Register--></a></li>
-        </ul>
-        <div class="navbar-right" *ngIf="_logObj.isLoggedIn">
-            <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
-                <img class="user-image img-circle" src="{{_logObj.user.imageUrl}}" />
-                <span class="nav-user-info">{{_logObj.user.name}}</span>
-            </a>
-            <!-- ======= -->
-            <div class="dropdown-menu dropdown-menu-right" role="menu">
-                <form class="form-horizontal" role="form">
-                    <div class="form-group">
-                        <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a (click)="gotoProfile()" for="contain" data-toggle="dropdown" class="padding-middle">Perfil <!--Profile--></a></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="lef-column padding-middle"><span class="fa fa-key"></span> <a href="http://altaauth.azurewebsites.net/Manage/ChangePassword" for="contain" class="padding-middle"> Contraseña<!--Change Password--> </a></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/signout" for="contain" class="padding-middle">Cerrar sesión <!--Sign Out--> </a></div>
-                    </div>
-                </form>
+        <div *ngIf="_logObj">
+            <ul class="nav navbar-nav navbar-right"  *ngIf="!_logObj.isLoggedIn">
+                <li><a href="/signin">Iniciar sesión <!--Log in--></a></li>
+                <li><a href="/signin">Regístrate <!--Register--></a></li>
+            </ul>
+            <div class="navbar-right" *ngIf="_logObj.isLoggedIn">
+                <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
+                    <img class="user-image img-circle" src="{{_logObj.user.imageUrl}}" />
+                    <span class="nav-user-info">{{_logObj.user.name}}</span>
+                </a>
+                <!-- ======= -->
+                <div class="dropdown-menu dropdown-menu-right" role="menu">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a (click)="gotoProfile()" for="contain" data-toggle="dropdown" class="padding-middle">Perfil <!--Profile--></a></div>
+                        </div>
+                        <div class="form-group">
+                            <div class="lef-column padding-middle"><span class="fa fa-key"></span> <a href="http://altaauth.azurewebsites.net/Manage/ChangePassword" for="contain" class="padding-middle"> Contraseña<!--Change Password--> </a></div>
+                        </div>
+                        <div class="form-group">
+                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/signout" for="contain" class="padding-middle">Cerrar sesión <!--Sign Out--> </a></div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+        
     </div>
     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" (click)="togglemenu()">
         <span class="sr-only">Toggle navigation</span>
