Profile info  validation issue fixed, image banner only 1 image added, nav bar made white

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -1,4 +1,4 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top z-header" [ngClass]="className">
+﻿<div class="navbar navbar-inverse navbar-fixed-top z-header nav-shadow" [ngClass]="className">
     <div class="navbar-header">
         <div asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand logo">
             <a routerLink="/"><img class="navbar-brand logo" src="../images/LOGO CUADRADO.png" /></a>            
