--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.html
@@ -7,7 +7,7 @@
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
-            <li><a routerLink="/question/home/1"><!--Questions-->Preguntas</a></li>
+            <li><a routerLink="/question/home/1"><!--Questions-->Responder</a></li>
         </ul>
         <div *ngIf="_logObj">
             <ul class="nav navbar-nav navbar-right"  *ngIf="!_logObj.isLoggedIn">
