some spanish text changed dashboard spacing issue fixed,

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/all-user/all-user.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/all-user/all-user.html
@@ -33,8 +33,8 @@
     <div class="loader"></div>
 </div>
 <div class="usr-search-group">
-    <input class="user-search" [(ngModel)]="userName" type="text" placeholder="Enter User Name " />
-    <button class="btn-usr-search" (click)="onKeyPress()">Search</button>
+    <input class="user-search" [(ngModel)]="userName" type="text" placeholder="Ingresa nombre de usuario" />
+    <button class="btn-usr-search" (click)="onKeyPress()">Buscar</button>
 </div>
 <div class="row row-fix all-user-list">
     <div class="col-md-4 row-gap width-xs" *ngFor="let usr of user">
